--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Sophia Williams - Software Developer (JavaScript)</title>
+		<title>Abdul Muhammad - API & Platform Engineer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Sophia Williams - JavaScript Software Developer specializing in cloud-native applications and modern web development." />
+		<meta name="description" content="Abdul Muhammad - API & Platform Engineer specializing in cloud infrastructure, API development, and platform engineering." />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -18,13 +18,13 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-code"></span>
-					<h1>Hi, I'm <strong>Sophia Williams</strong><br />
-					Software Developer (JavaScript)</h1>
-					<p>Passionate JavaScript developer building scalable cloud-native applications<br />
-					with modern frameworks and cutting-edge technologies.</p>
+					<span class="icon solid major fa-cogs"></span>
+					<h1>Hi, I'm <strong>Abdul Muhammad</strong><br />
+					API & Platform Engineer</h1>
+					<p>Building robust platforms and APIs that power cloud-native applications<br />
+					with scalable infrastructure and modern engineering practices.</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">View My Work</a></li>
+						<li><a href="#one" class="button scrolly">Explore My Expertise</a></li>
 					</ul>
 				</div>
 			</section>
@@ -36,16 +36,16 @@
 						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>About Me<br />
-								JavaScript Developer</h2>
+								Platform Engineer</h2>
 							</header>
-							<p>I'm a passionate software developer specializing in JavaScript and cloud-native application development. With expertise in modern JavaScript frameworks and cloud platforms, I build scalable, performant applications that leverage the power of cloud infrastructure.</p>
-							<p>I specialize in developing full-stack JavaScript applications using React, Node.js, and TypeScript, with deep experience deploying and managing applications on AWS, Azure, and GCP. My focus is on creating elegant solutions that combine cutting-edge JavaScript technologies with cloud services to deliver exceptional user experiences.</p>
+							<p>I'm a dedicated API & Platform Engineer with extensive experience in designing, building, and maintaining cloud-native platforms and APIs. My expertise lies in creating scalable infrastructure, developing robust API ecosystems, and engineering platforms that enable teams to deliver high-quality software efficiently.</p>
+							<p>I specialize in building platform-as-a-service solutions on AWS, Azure, and GCP, developing RESTful and GraphQL APIs, and implementing infrastructure as code. My focus is on creating developer-friendly platforms that abstract complexity while providing powerful capabilities for building and deploying cloud applications.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/sophiwill66" class="button icon brands fa-github" target="_blank">View GitHub</a></li>
+								<li><a href="https://github.com/muhammad08-topG" class="button icon brands fa-github" target="_blank">View GitHub</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="JavaScript Development" /></span>
+							<span class="image fit"><img src="images/pic01.jpg" alt="Platform Engineering" /></span>
 						</div>
 					</div>
 				</div>
@@ -57,25 +57,25 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
+								<li><span class="icon solid style1 major fa-cogs"></span></li>
 								<li><span class="icon solid style2 major fa-cloud"></span></li>
-								<li><span class="icon solid style3 major fa-server"></span></li>
-								<li><span class="icon solid style4 major fa-database"></span></li>
-								<li><span class="icon solid style5 major fa-mobile-alt"></span></li>
+								<li><span class="icon solid style3 major fa-plug"></span></li>
+								<li><span class="icon solid style4 major fa-server"></span></li>
+								<li><span class="icon solid style5 major fa-network-wired"></span></li>
 								<li><span class="icon solid style6 major fa-rocket"></span></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>Skills & Expertise<br />
-								Cloud JavaScript Development</h2>
+								Cloud Platform Engineering</h2>
 							</header>
-							<p><strong>JavaScript Frameworks & Libraries:</strong> React, Vue.js, Angular, Next.js, Express.js, Node.js, TypeScript, ES6+, Webpack, Vite, npm/yarn, Jest, Mocha, Cypress</p>
-							<p><strong>Cloud Platforms & Services:</strong> AWS (Lambda, S3, EC2, API Gateway, DynamoDB), Azure (Functions, App Service, Cosmos DB), GCP (Cloud Functions, Firebase, Cloud Run), Serverless Architecture, Cloud Deployment</p>
-							<p><strong>Backend Development:</strong> Node.js, Express.js, RESTful APIs, GraphQL, Microservices, Serverless Functions, API Development, Authentication & Authorization (JWT, OAuth)</p>
-							<p><strong>Frontend Development:</strong> React Hooks, State Management (Redux, Zustand), Responsive Design, Progressive Web Apps (PWA), Web Components, CSS-in-JS, Tailwind CSS, Material-UI</p>
-							<p><strong>Cloud DevOps & Tools:</strong> CI/CD Pipelines (GitHub Actions, Jenkins), Docker, Kubernetes, Terraform, CloudFormation, Git, GitHub, Monitoring & Logging (CloudWatch, Azure Monitor)</p>
-							<p><strong>Database & Storage:</strong> MongoDB, PostgreSQL, MySQL, Redis, DynamoDB, Cloud Storage, Data Modeling, ORM/ODM (Mongoose, Sequelize), Database Optimization</p>
+							<p><strong>Platform Engineering:</strong> Internal Developer Platforms (IDP), Platform-as-a-Service (PaaS), Developer Experience (DX), Self-Service Infrastructure, Platform Architecture, Multi-Cloud Platforms, Kubernetes Platforms</p>
+							<p><strong>API Development & Management:</strong> RESTful API Design, GraphQL APIs, API Gateway (AWS, Azure, Kong, Apigee), API Versioning, API Documentation (OpenAPI/Swagger), API Security, Rate Limiting, API Analytics</p>
+							<p><strong>Cloud Infrastructure:</strong> AWS (EC2, ECS, EKS, Lambda, API Gateway), Azure (AKS, App Service, Functions), GCP (GKE, Cloud Run, Cloud Functions), Infrastructure as Code (Terraform, CloudFormation, Pulumi), Multi-Cloud Strategy</p>
+							<p><strong>Container & Orchestration:</strong> Docker, Kubernetes, Container Registries, Helm Charts, Service Mesh (Istio, Linkerd), Container Security, Pod Security Policies, Kubernetes Operators</p>
+							<p><strong>DevOps & CI/CD:</strong> CI/CD Pipelines (Jenkins, GitLab CI, GitHub Actions, CircleCI), GitOps (ArgoCD, Flux), Infrastructure Automation, Deployment Strategies (Blue-Green, Canary), Monitoring & Observability</p>
+							<p><strong>Microservices & Integration:</strong> Microservices Architecture, Service Discovery, API Gateway Patterns, Event-Driven Architecture, Message Queues (RabbitMQ, Kafka), Service Mesh, Distributed Systems</p>
 						</div>
 					</div>
 				</div>
@@ -87,30 +87,30 @@
 					<header class="major">
 						<h2>Core Competencies</h2>
 					</header>
-					<p>Key areas of expertise in cloud-based JavaScript development</p>
+					<p>Key areas of expertise in cloud platform engineering and API development</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="icon solid style1 major fa-code"></span>
-							<h3>Full-Stack JavaScript</h3>
-							<p>Building end-to-end applications with React, Node.js, and TypeScript. Creating responsive frontends with modern frameworks and robust backends with Express.js, seamlessly integrated with cloud services for scalable, performant solutions.</p>
+							<span class="icon solid style1 major fa-cogs"></span>
+							<h3>Platform Engineering</h3>
+							<p>Designing and building internal developer platforms that enable teams to deploy and scale applications efficiently. Creating self-service infrastructure, developer tooling, and platform capabilities that abstract complexity while providing powerful cloud-native features.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/sophiwill66" class="button" target="_blank">View Projects</a></li>
+								<li><a href="https://github.com/muhammad08-topG" class="button" target="_blank">View Projects</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="icon solid style2 major fa-cloud"></span>
-							<h3>Cloud-Native Development</h3>
-							<p>Developing and deploying serverless applications on AWS Lambda, Azure Functions, and Google Cloud Functions. Expertise in cloud architecture patterns, microservices design, and leveraging cloud services for optimal performance and scalability.</p>
+							<span class="icon solid style2 major fa-plug"></span>
+							<h3>API Development</h3>
+							<p>Designing, developing, and managing robust API ecosystems with RESTful and GraphQL APIs. Implementing API gateways, versioning strategies, security best practices, and comprehensive documentation to enable seamless integration and developer experience.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/sophiwill66" class="button" target="_blank">View Projects</a></li>
+								<li><a href="https://github.com/muhammad08-topG" class="button" target="_blank">View Projects</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="icon solid style3 major fa-rocket"></span>
-							<h3>DevOps & Automation</h3>
-							<p>Implementing CI/CD pipelines, containerization with Docker, and orchestration with Kubernetes. Automating deployments, managing infrastructure as code, and ensuring seamless integration between development and cloud operations.</p>
+							<span class="icon solid style3 major fa-cloud"></span>
+							<h3>Cloud Infrastructure</h3>
+							<p>Architecting and managing cloud infrastructure across AWS, Azure, and GCP. Implementing infrastructure as code, container orchestration with Kubernetes, and building scalable, resilient platforms that support modern application architectures.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/sophiwill66" class="button" target="_blank">View Projects</a></li>
+								<li><a href="https://github.com/muhammad08-topG" class="button" target="_blank">View Projects</a></li>
 							</ul>
 						</div>
 					</div>
@@ -121,11 +121,11 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Let's Build Something Amazing</h2>
+						<h2>Let's Build Powerful Platforms</h2>
 					</header>
-					<p>Ready to create powerful, cloud-powered JavaScript applications? Let's connect and discuss how I can help bring your ideas to life with modern JavaScript and cloud technologies.</p>
+					<p>Ready to create robust platforms and APIs that scale? Let's connect and discuss how I can help design and build cloud-native platforms that empower your teams to deliver exceptional software.</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/sophiwill66" class="button wide primary icon brands fa-github" target="_blank">View My GitHub</a></li>
+						<li><a href="https://github.com/muhammad08-topG" class="button wide primary icon brands fa-github" target="_blank">View My GitHub</a></li>
 						<li><a href="#one" class="button wide scrolly">Learn More</a></li>
 					</ul>
 				</div>
@@ -452,14 +452,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-					<li><a href="mailto:contact@sophiawilliams.dev" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-dev" target="_blank"><span class="label">Dev.to</span></a></li>
+					<li><a href="https://github.com/muhammad08-topG" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/muhammad08-topG" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/muhammad08-topG" class="icon brands alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:contact@abdulmuhammad.dev" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/muhammad08-topG" class="icon brands alt fa-dev" target="_blank"><span class="label">Dev.to</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Sophia Williams</li><li>Software Developer | JavaScript Specialist | Cloud Engineer</li>
+					<li>&copy; Abdul Muhammad</li><li>API & Platform Engineer | Cloud Infrastructure Specialist</li>
 				</ul>
 			</section>
 
