--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Jackson Benson - Pentester (Red Team)</title>
+		<title>Sophia Williams - Software Developer (JavaScript)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Jackson Benson - Pentester and Red Team Specialist focusing on cloud security, penetration testing, and ethical hacking." />
+		<meta name="description" content="Sophia Williams - JavaScript Software Developer specializing in cloud-native applications and modern web development." />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -18,13 +18,13 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-shield-alt"></span>
-					<h1>Hi, I'm <strong>Jackson Benson</strong><br />
-					Pentester (Red Team)</h1>
-					<p>Cybersecurity expert specializing in cloud penetration testing and red team operations<br />
-					protecting organizations through ethical hacking and security assessments.</p>
+					<span class="icon solid major fa-code"></span>
+					<h1>Hi, I'm <strong>Sophia Williams</strong><br />
+					Software Developer (JavaScript)</h1>
+					<p>Passionate JavaScript developer building scalable cloud-native applications<br />
+					with modern frameworks and cutting-edge technologies.</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Explore My Skills</a></li>
+						<li><a href="#one" class="button scrolly">View My Work</a></li>
 					</ul>
 				</div>
 			</section>
@@ -36,16 +36,16 @@
 						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>About Me<br />
-								Red Team Pentester</h2>
+								JavaScript Developer</h2>
 							</header>
-							<p>I'm a dedicated penetration tester and red team specialist with extensive experience in cloud security assessments. My expertise lies in identifying vulnerabilities, exploiting security weaknesses, and providing actionable remediation strategies for cloud-based infrastructures.</p>
-							<p>I specialize in conducting comprehensive penetration tests across AWS, Azure, and GCP environments, performing red team exercises, and simulating real-world attack scenarios. My goal is to help organizations strengthen their cloud security posture by thinking like an attacker and uncovering vulnerabilities before malicious actors do.</p>
+							<p>I'm a passionate software developer specializing in JavaScript and cloud-native application development. With expertise in modern JavaScript frameworks and cloud platforms, I build scalable, performant applications that leverage the power of cloud infrastructure.</p>
+							<p>I specialize in developing full-stack JavaScript applications using React, Node.js, and TypeScript, with deep experience deploying and managing applications on AWS, Azure, and GCP. My focus is on creating elegant solutions that combine cutting-edge JavaScript technologies with cloud services to deliver exceptional user experiences.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/jacksonbenson562-arch" class="button icon brands fa-github" target="_blank">View GitHub</a></li>
+								<li><a href="https://github.com/sophiwill66" class="button icon brands fa-github" target="_blank">View GitHub</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="Penetration Testing" /></span>
+							<span class="image fit"><img src="images/pic01.jpg" alt="JavaScript Development" /></span>
 						</div>
 					</div>
 				</div>
@@ -57,25 +57,25 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-shield-alt"></span></li>
-								<li><span class="icon solid style2 major fa-user-secret"></span></li>
-								<li><span class="icon solid style3 major fa-cloud"></span></li>
-								<li><span class="icon solid style4 major fa-lock"></span></li>
-								<li><span class="icon solid style5 major fa-terminal"></span></li>
-								<li><span class="icon solid style6 major fa-bug"></span></li>
+								<li><span class="icon solid style1 major fa-code"></span></li>
+								<li><span class="icon solid style2 major fa-cloud"></span></li>
+								<li><span class="icon solid style3 major fa-server"></span></li>
+								<li><span class="icon solid style4 major fa-database"></span></li>
+								<li><span class="icon solid style5 major fa-mobile-alt"></span></li>
+								<li><span class="icon solid style6 major fa-rocket"></span></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>Skills & Expertise<br />
-								Cloud Penetration Testing</h2>
+								Cloud JavaScript Development</h2>
 							</header>
-							<p><strong>Cloud Security Assessment:</strong> AWS Security Testing, Azure Penetration Testing, GCP Security Audits, Cloud Infrastructure Hacking, Multi-cloud Security Testing, Cloud Misconfiguration Exploitation</p>
-							<p><strong>Penetration Testing Tools:</strong> Metasploit, Burp Suite, OWASP ZAP, Nmap, Wireshark, SQLMap, Nessus, OpenVAS, Cloud-specific Security Scanners, Custom Exploit Development</p>
-							<p><strong>Cloud Attack Vectors:</strong> IAM Privilege Escalation, S3 Bucket Enumeration, Lambda Function Injection, Container Escape Techniques, Serverless Security Testing, API Gateway Exploitation</p>
-							<p><strong>Red Team Operations:</strong> Adversary Simulation, APT Emulation, Lateral Movement, Persistence Mechanisms, Cloud-based C2 Infrastructure, Social Engineering, Phishing Campaigns</p>
-							<p><strong>Vulnerability Assessment:</strong> Cloud Security Posture Management (CSPM), Infrastructure as Code (IaC) Security, Container Security Scanning, Cloud Log Analysis, Security Misconfiguration Detection</p>
-							<p><strong>Exploitation & Post-Exploitation:</strong> Cloud Credential Harvesting, Data Exfiltration Techniques, Cloud Backdoor Deployment, Privilege Escalation in Cloud Environments, Cloud Forensics and Incident Response</p>
+							<p><strong>JavaScript Frameworks & Libraries:</strong> React, Vue.js, Angular, Next.js, Express.js, Node.js, TypeScript, ES6+, Webpack, Vite, npm/yarn, Jest, Mocha, Cypress</p>
+							<p><strong>Cloud Platforms & Services:</strong> AWS (Lambda, S3, EC2, API Gateway, DynamoDB), Azure (Functions, App Service, Cosmos DB), GCP (Cloud Functions, Firebase, Cloud Run), Serverless Architecture, Cloud Deployment</p>
+							<p><strong>Backend Development:</strong> Node.js, Express.js, RESTful APIs, GraphQL, Microservices, Serverless Functions, API Development, Authentication & Authorization (JWT, OAuth)</p>
+							<p><strong>Frontend Development:</strong> React Hooks, State Management (Redux, Zustand), Responsive Design, Progressive Web Apps (PWA), Web Components, CSS-in-JS, Tailwind CSS, Material-UI</p>
+							<p><strong>Cloud DevOps & Tools:</strong> CI/CD Pipelines (GitHub Actions, Jenkins), Docker, Kubernetes, Terraform, CloudFormation, Git, GitHub, Monitoring & Logging (CloudWatch, Azure Monitor)</p>
+							<p><strong>Database & Storage:</strong> MongoDB, PostgreSQL, MySQL, Redis, DynamoDB, Cloud Storage, Data Modeling, ORM/ODM (Mongoose, Sequelize), Database Optimization</p>
 						</div>
 					</div>
 				</div>
@@ -87,30 +87,30 @@
 					<header class="major">
 						<h2>Core Competencies</h2>
 					</header>
-					<p>Key areas of expertise in cloud penetration testing and red team operations</p>
+					<p>Key areas of expertise in cloud-based JavaScript development</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="icon solid style1 major fa-shield-alt"></span>
-							<h3>Cloud Penetration Testing</h3>
-							<p>Conducting comprehensive security assessments of cloud infrastructures across AWS, Azure, and GCP. Expertise in identifying misconfigurations, exploiting IAM vulnerabilities, and testing cloud-native services to uncover security weaknesses before attackers do.</p>
+							<span class="icon solid style1 major fa-code"></span>
+							<h3>Full-Stack JavaScript</h3>
+							<p>Building end-to-end applications with React, Node.js, and TypeScript. Creating responsive frontends with modern frameworks and robust backends with Express.js, seamlessly integrated with cloud services for scalable, performant solutions.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/jacksonbenson562-arch" class="button" target="_blank">View Projects</a></li>
+								<li><a href="https://github.com/sophiwill66" class="button" target="_blank">View Projects</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="icon solid style2 major fa-user-secret"></span>
-							<h3>Red Team Operations</h3>
-							<p>Leading sophisticated red team exercises and adversary simulations in cloud environments. Specializing in APT emulation, lateral movement techniques, persistence mechanisms, and cloud-based command and control infrastructure to test organizational security resilience.</p>
+							<span class="icon solid style2 major fa-cloud"></span>
+							<h3>Cloud-Native Development</h3>
+							<p>Developing and deploying serverless applications on AWS Lambda, Azure Functions, and Google Cloud Functions. Expertise in cloud architecture patterns, microservices design, and leveraging cloud services for optimal performance and scalability.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/jacksonbenson562-arch" class="button" target="_blank">View Projects</a></li>
+								<li><a href="https://github.com/sophiwill66" class="button" target="_blank">View Projects</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="icon solid style3 major fa-bug"></span>
-							<h3>Vulnerability Research</h3>
-							<p>Discovering and exploiting zero-day vulnerabilities in cloud services and applications. Developing custom exploits, conducting security research, and providing detailed remediation guidance to help organizations patch critical security flaws.</p>
+							<span class="icon solid style3 major fa-rocket"></span>
+							<h3>DevOps & Automation</h3>
+							<p>Implementing CI/CD pipelines, containerization with Docker, and orchestration with Kubernetes. Automating deployments, managing infrastructure as code, and ensuring seamless integration between development and cloud operations.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/jacksonbenson562-arch" class="button" target="_blank">View Projects</a></li>
+								<li><a href="https://github.com/sophiwill66" class="button" target="_blank">View Projects</a></li>
 							</ul>
 						</div>
 					</div>
@@ -121,11 +121,11 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Secure Your Cloud Infrastructure</h2>
+						<h2>Let's Build Something Amazing</h2>
 					</header>
-					<p>Ready to identify and remediate security vulnerabilities in your cloud environment? Let's connect and discuss how I can help strengthen your security posture through comprehensive penetration testing and red team exercises.</p>
+					<p>Ready to create powerful, cloud-powered JavaScript applications? Let's connect and discuss how I can help bring your ideas to life with modern JavaScript and cloud technologies.</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/jacksonbenson562-arch" class="button wide primary icon brands fa-github" target="_blank">View My GitHub</a></li>
+						<li><a href="https://github.com/sophiwill66" class="button wide primary icon brands fa-github" target="_blank">View My GitHub</a></li>
 						<li><a href="#one" class="button wide scrolly">Learn More</a></li>
 					</ul>
 				</div>
@@ -452,14 +452,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://github.com/jacksonbenson562-arch" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-					<li><a href="https://github.com/jacksonbenson562-arch" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/jacksonbenson562-arch" class="icon brands alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-					<li><a href="mailto:contact@jacksonbenson.dev" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://github.com/jacksonbenson562-arch" class="icon brands alt fa-hacker-news" target="_blank"><span class="label">Hacker News</span></a></li>
+					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="mailto:contact@sophiawilliams.dev" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/sophiwill66" class="icon brands alt fa-dev" target="_blank"><span class="label">Dev.to</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Jackson Benson</li><li>Pentester | Red Team Specialist | Cloud Security Expert</li>
+					<li>&copy; Sophia Williams</li><li>Software Developer | JavaScript Specialist | Cloud Engineer</li>
 				</ul>
 			</section>
 
